Final Version of App without Zod Validation

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,9 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+dependencies {
+    implementation project(':react-native-vector-icons')
+}
