--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "@reduxjs/toolkit": "^2.9.2",
-    "nativewind": "^4.2.1",
+    "nativewind": "^5.0.0-preview.2",
     "react": "19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-native": "0.82.1",
+    "react-native-css": "^3.0.1",
     "react-native-gesture-handler": "^2.29.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
@@ -25,7 +28,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.1",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.18"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -38,16 +41,24 @@
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "postcss": "^8.5.6",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "lightningcss": "1.30.1"
   }
 }
